--- a/src/app/components/top-rate/top-rate.component.html
+++ b/src/app/components/top-rate/top-rate.component.html
@@ -1,5 +1,9 @@
 <div class="p-4 bg-black text-white rounded">
-  <h2 class="text-xl font-bold mb-4">Phim Top Rate</h2>
+ <h2 class="mb-4 border-b-2 border-red-600 pb-2
+           bg-gradient-to-r from-red-500 to-yellow-400
+           transition-all duration-300 ease-in-out
+           text-transparent bg-clip-text cursor-pointer
+           font-extrabold text-xl drop-shadow-md">Phim đánh giá cao</h2>
 
   <div *ngIf="isLoading" class="text-center">Loading...</div>
 
