--- a/src/app/components/latest-movie-list/latest-movie-list.component.html
+++ b/src/app/components/latest-movie-list/latest-movie-list.component.html
@@ -1,65 +1,59 @@
 <div class="p-4 bg-black text-white relative w-full rounded">
-    <div class="flex items-center justify-between mb-4">
-        <h2 class="mb-4 border-b-2 border-red-600 pb-2
-           bg-gradient-to-r from-red-500 to-yellow-400
-           transition-all duration-300 ease-in-out
-           text-transparent bg-clip-text cursor-pointer
-           font-extrabold text-xl drop-shadow-md">
-            <img src="assets/icon/tv_show.gif" alt="Anime Icon" class="inline-block w-10 h-10 mr-2" />
-            Phim mới
-        </h2>
-        <!-- <button (click)="loadMore()" 
-          class="bg-gradient-to-r from-teal-500 to-blue-500 hover:from-teal-600 hover:to-blue-600 text-white px-4 py-1 rounded whitespace-nowrap">
-    Xem thêm
-  </button> -->
-    </div>
 
-<!-- Nút điều hướng -->
-<button
-  (click)="scrollLeft()"
-  class="absolute left-0 top-2/3 transform -translate-y-1/2 z-10 p-2
-         bg-gradient-to-r from-red-600 to-orange-500
-         hover:from-red-700 hover:to-orange-600
-         text-white rounded"
->
-  <span class="text-2xl">❮</span>
-</button>
-<button
-  (click)="scrollRight()"
-  class="absolute right-0 top-2/3 transform -translate-y-1/2 z-10 p-2
-         bg-gradient-to-r from-red-600 to-orange-500
-         hover:from-red-700 hover:to-orange-600
-         text-white rounded"
->
-  <span class="text-2xl">❯</span>
-</button>
+  <!-- Tiêu đề -->
+  <div class="flex items-center justify-between mb-4">
+    <h2 class="mb-4 border-b-2 border-red-600 pb-2
+       bg-gradient-to-r from-red-500 to-yellow-400
+       text-transparent bg-clip-text cursor-pointer
+       font-extrabold text-xl drop-shadow-md">
+      <img src="assets/icon/tv_show.gif" alt="Anime Icon" class="inline-block w-10 h-10 mr-2" />
+      Phim mới
+    </h2>
+  </div>
 
+  <!-- Nút điều hướng -->
+  <button (click)="scrollLeft()" class="absolute left-0 top-2/3 transform -translate-y-1/2 z-10 p-2
+           bg-gradient-to-r from-red-600 to-orange-500 text-white rounded">❮</button>
+  <button (click)="scrollRight()" class="absolute right-0 top-2/3 transform -translate-y-1/2 z-10 p-2
+           bg-gradient-to-r from-red-600 to-orange-500 text-white rounded">❯</button>
 
-    <!-- Carousel -->
-    <div #carousel class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1">
-        <div *ngFor="let movie of movies" class="flex-shrink-0 bg-zinc-900 rounded shadow snap-start
-             w-[130px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]">
-            <a [routerLink]="['/phim', movie.slug]" class="block">
+  <!-- Carousel -->
+  <div #carousel class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1">
 
-                <!-- Bọc ảnh trong relative -->
-                <div class="relative">
-                    <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
-                        class="w-full h-40 md:h-48 object-cover rounded" />
-
-                    <!-- Label chất lượng + ngôn ngữ -->
-                    <div class="absolute top-0 right-1 z-10">
-                        <span class="bg-gradient-to-r from-purple-600 to-pink-500 hover:from-purple-700 hover:to-pink-600
-                     text-white text-[10px] px-2 py-1 rounded shadow">
-                            {{ movie.quality }} + {{ movie.lang }}
-                        </span>
-                    </div>
-                </div>
-
-                <div class="p-2">
-                    <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
-                    <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
-                </div>
-            </a>
+    <!-- SKELETON -->
+    <ng-container *ngIf="isLoading">
+      <div *ngFor="let s of [1,2,3,4,5,6]" class="flex-shrink-0 rounded shadow snap-start
+          w-[130px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]">
+        <div class="w-full h-40 md:h-48 bg-gray-700 animate-pulse rounded"></div>
+        <div class="mt-2 space-y-2">
+          <div class="h-4 bg-gray-700 rounded w-3/4 animate-pulse"></div>
+          <div class="h-3 bg-gray-600 rounded w-1/2 animate-pulse"></div>
         </div>
-    </div>
+      </div>
+    </ng-container>
+
+    <!-- MOVIE DATA -->
+    <ng-container *ngIf="!isLoading">
+      <div *ngFor="let movie of movies" class="flex-shrink-0 bg-zinc-900 rounded shadow snap-start
+           w-[130px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]">
+        <a [routerLink]="['/phim', movie.slug]" class="block">
+          <div class="relative">
+            <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url"
+                 [alt]="movie.name" class="w-full h-40 md:h-48 object-cover rounded" />
+            <div class="absolute top-0 right-1 z-10">
+              <span class="bg-gradient-to-r from-purple-600 to-pink-500
+                text-white text-[10px] px-2 py-1 rounded shadow">
+                {{ movie.quality }} + {{ movie.lang }}
+              </span>
+            </div>
+          </div>
+          <div class="p-2">
+            <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
+            <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
+          </div>
+        </a>
+      </div>
+    </ng-container>
+
+  </div>
 </div>
