--- a/src/app/components/movie-series/movie-series.component.html
+++ b/src/app/components/movie-series/movie-series.component.html
@@ -57,7 +57,7 @@
                             </div>
                         </div>
 
-                        <div class="space-x-2 px-2 py-2">
+        <div class="flex justify-center space-x-2 items-center p-2">
                             <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
                                 {{ movie.category[0]?.name }}
                             </span>
