--- a/src/app/pages/movie-single-page/movie-single-page.component.html
+++ b/src/app/pages/movie-single-page/movie-single-page.component.html
@@ -60,7 +60,7 @@
             </div>
 
             <!-- Category + Year -->
-            <div class="space-x-2 px-2 py-2">
+        <div class="flex justify-center space-x-2 items-center p-2">
               <span
                 class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded"
               >
