--- a/src/app/components/latest-movie-list/latest-movie-list.component.html
+++ b/src/app/components/latest-movie-list/latest-movie-list.component.html
@@ -18,42 +18,45 @@
            bg-gradient-to-r from-red-600 to-orange-500 text-white rounded">❯</button>
 
   <!-- Carousel -->
-  <div #carousel class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1">
+  <!-- Carousel -->
+<div #carousel class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1">
 
-    <!-- SKELETON -->
-    <ng-container *ngIf="isLoading">
-      <div *ngFor="let s of [1,2,3,4,5,6]" class="flex-shrink-0 rounded shadow snap-start
-          w-[130px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]">
-        <div class="w-full h-40 md:h-48 bg-gray-700 animate-pulse rounded"></div>
-        <div class="mt-2 space-y-2">
-          <div class="h-4 bg-gray-700 rounded w-3/4 animate-pulse"></div>
-          <div class="h-3 bg-gray-600 rounded w-1/2 animate-pulse"></div>
+  <!-- SKELETON -->
+  <ng-container *ngIf="isLoading">
+    <div *ngFor="let s of [1,2,3,4,5,6]" class="flex-shrink-0 rounded shadow snap-start
+        w-[130px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]">
+      <div class="w-full h-40 md:h-48 bg-gray-700 animate-pulse rounded"></div>
+      <div class="mt-2 space-y-2">
+        <div class="h-4 bg-gray-700 rounded w-3/4 animate-pulse"></div>
+        <div class="h-3 bg-gray-600 rounded w-1/2 animate-pulse"></div>
+      </div>
+    </div>
+  </ng-container>
+
+  <!-- MOVIE DATA -->
+  <ng-container *ngIf="!isLoading">
+    <div *ngFor="let movie of movies"
+         class="flex-shrink-0 w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/4 xl:w-1/5
+                bg-zinc-900 rounded shadow snap-start">
+      <a [routerLink]="['/phim', movie.slug]" class="block">
+        <div class="relative">
+          <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url"
+               [alt]="movie.name" class="w-full h-40 md:h-48 object-cover rounded" />
+          <div class="absolute top-0 right-1 z-10">
+            <span class="bg-gradient-to-r from-purple-600 to-pink-500
+                         text-white text-[10px] px-2 py-1 rounded shadow">
+              {{ movie.quality }} + {{ movie.lang }}
+            </span>
+          </div>
         </div>
-      </div>
-    </ng-container>
+        <div class="p-2">
+          <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
+          <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
+        </div>
+      </a>
+    </div>
+  </ng-container>
 
-    <!-- MOVIE DATA -->
-    <ng-container *ngIf="!isLoading">
-      <div *ngFor="let movie of movies" class="flex-shrink-0 bg-zinc-900 rounded shadow snap-start
-           w-[130px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]">
-        <a [routerLink]="['/phim', movie.slug]" class="block">
-          <div class="relative">
-            <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url"
-                 [alt]="movie.name" class="w-full h-40 md:h-48 object-cover rounded" />
-            <div class="absolute top-0 right-1 z-10">
-              <span class="bg-gradient-to-r from-purple-600 to-pink-500
-                text-white text-[10px] px-2 py-1 rounded shadow">
-                {{ movie.quality }} + {{ movie.lang }}
-              </span>
-            </div>
-          </div>
-          <div class="p-2">
-            <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
-            <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
-          </div>
-        </a>
-      </div>
-    </ng-container>
+</div>
 
-  </div>
 </div>
