--- a/src/app/pages/movie-randome/movie-randome.component.html
+++ b/src/app/pages/movie-randome/movie-randome.component.html
@@ -1,6 +1,6 @@
 <button
   (click)="goToRandomMovie()"
-  class="bg-yellow-600 hover:bg-yellow-700 text-white px-4 py-2 rounded w-full text-center cursor-pointer"
->
-  🎲 Xem phim ngẫu nhiên
+            class="bg-gradient-to-r from-teal-500 to-blue-500 hover:from-teal-600 hover:to-blue-600 text-white px-4 py-2 rounded whitespace-nowrap">
+
+   Xem ngẫu nhiên
 </button>
